--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "cdrdao-1.2.3.tar.bz2": 70d6547795a1342631c7ab56709fd1940c2aff9f
+  cdrdao-1.2.4.tar.bz2: 3adfbdefc73728a75c9ddc41160c9fe4139fb1e0
